-Ajout d'une page pour s'enregistrer et un lien vers cette page. - Correction de bugs et de checkstyles